testsuite/tests/indexed-types/should_fail/T7354a.hs
module T7354a where

import T7354b

foo = embed ()

bar = foo
