testsuite/tests/indexed-types/should_fail/T7354a.stderr

T7354a.hs:5:13: error:
    • Couldn't match expected type ‘Base t t’ with actual type ‘()’
    • In the first argument of ‘embed’, namely ‘()’
      In the expression: embed ()
      In an equation for ‘foo’: foo = embed ()
    • Relevant bindings include foo :: t (bound at T7354a.hs:5:1)
